# Majandsss-ebac_docker

./: Dockerfile  README.md  celery_app.py  docker-compose.yaml  kafka_producer.py  livros.db  main.py  pyproject.toml  tasks.py
.github/workflows/: python-app.yml
tests/: conftest.py  test_auth.py  test_database.py  test_hello_world.py  test_tasks.py  test_tasks_endpoint.py
