[project]
name = "livrosebac"
version = "0.1.0"
description = ""
authors = [
    {name = "Majari",email = "majaandressa@hotmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "redis (>=7.4.0,<8.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "kafka-python (>=2.3.1,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.init_options]
# pythonpath = [.]
[dependency-groups]
dev = [
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
